<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:background="@color/anaRenk"
        android:backgroundTint="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:srcCompat="@drawable/doviz2"></ImageButton>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"

        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton3"
        app:srcCompat="@drawable/para2"></ImageButton>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:srcCompat="@drawable/atm2"></ImageButton>

    <ImageButton
        android:id="@+id/imageButton3"

        android:layout_width="70dp"
        android:layout_height="70dp"


        android:layout_marginBottom="80dp"

        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/karekod"></ImageButton>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/atmbuton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/cekbuton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/QRbuton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/dovizbuton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/girisbutonu"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="34dp"
        android:backgroundTint="@color/white"
        android:onClick="kullanicifarkli"
        android:text="@string/itirazbutonu"
        android:textColor="@color/koyuRenk"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="198dp"
        android:layout_height="98dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="98dp"
        android:text="@string/girisyazisi"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="169dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yc5" />


</androidx.constraintlayout.widget.ConstraintLayout>